--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 body{
     margin: 0px 0px 0px 0px ;
     padding: 0px;
-    background: linear-gradient(178deg, #f9f9fa, #a19fa2);
+    background:  #a19fa2;
     height: 0px;
 }
 .clearfix{clear: both;}
